--- a/cool/icons/iconfont.scss
+++ b/cool/icons/iconfont.scss
@@ -1,11 +1,11 @@
 @font-face {
 	font-family: "cl-iconfont"; /* project id 1413181 */
-	src: url("//at.alicdn.com/t/font_1413181_l7ud4rvrfcj.eot");
-	src: url("//at.alicdn.com/t/font_1413181_l7ud4rvrfcj.eot?#iefix") format("embedded-opentype"),
-		url("//at.alicdn.com/t/font_1413181_l7ud4rvrfcj.woff2") format("woff2"),
-		url("//at.alicdn.com/t/font_1413181_l7ud4rvrfcj.woff") format("woff"),
-		url("//at.alicdn.com/t/font_1413181_l7ud4rvrfcj.ttf") format("truetype"),
-		url("//at.alicdn.com/t/font_1413181_l7ud4rvrfcj.svg#iconfont") format("svg");
+	src: url("//at.alicdn.com/t/font_1413181_bwp86guyuu.eot");
+	src: url("//at.alicdn.com/t/font_1413181_bwp86guyuu.eot?#iefix") format("embedded-opentype"),
+		url("//at.alicdn.com/t/font_1413181_bwp86guyuu.woff2") format("woff2"),
+		url("//at.alicdn.com/t/font_1413181_bwp86guyuu.woff") format("woff"),
+		url("//at.alicdn.com/t/font_1413181_bwp86guyuu.ttf") format("truetype"),
+		url("//at.alicdn.com/t/font_1413181_bwp86guyuu.svg#iconfont") format("svg");
 }
 
 [class*="cl-icon"] {
@@ -14,8 +14,64 @@
 	font-style: normal;
 }
 
-.cl-icon-refresh:before {
-	content: "\e71e";
+.cl-icon-friend:before {
+	content: "\e88e";
+}
+
+.cl-icon-clock:before {
+	content: "\e890";
+}
+
+.cl-icon-app:before {
+	content: "\e892";
+}
+
+.cl-icon-safe:before {
+	content: "\e895";
+}
+
+.cl-icon-hotel:before {
+	content: "\e89b";
+}
+
+.cl-icon-feedback:before {
+	content: "\e8a1";
+}
+
+.cl-icon-comment:before {
+	content: "\e8b4";
+}
+
+.cl-icon-community:before {
+	content: "\e8b8";
+}
+
+.cl-icon-order:before {
+	content: "\e8ae";
+}
+
+.cl-icon-2bei:before {
+	content: "\e8af";
+}
+
+.cl-icon-vip:before {
+	content: "\e8b1";
+}
+
+.cl-icon-trend:before {
+	content: "\e8b9";
+}
+
+.cl-icon-cycle:before {
+	content: "\e8bd";
+}
+
+.cl-icon-role:before {
+	content: "\e614";
+}
+
+.cl-icon-common:before {
+	content: "\e6bc";
 }
 
 .cl-icon-schedule:before {
@@ -46,22 +102,10 @@
 	content: "\e646";
 }
 
-.cl-icon-permission:before {
-	content: "\e60f";
-}
-
 .cl-icon-log:before {
 	content: "\e663";
 }
 
 .cl-icon-workbench:before {
 	content: "\e649";
-}
-
-.cl-icon-common:before {
-	content: "\e6bc";
-}
-
-.cl-icon-role::before {
-	content: "\e614";
 }
