--- a/static/css/index.scss
+++ b/static/css/index.scss
@@ -5,6 +5,12 @@
 		"微软雅黑", Arial, sans-serif;
 }
 
+body,
+html {
+	-webkit-user-select: text;
+	user-select: text;
+}
+
 a {
 	text-decoration: none;
 }
@@ -17,7 +23,7 @@ button {
 button {
 	padding: 0;
 	margin: 0;
-	
+
 	&::after {
 		border: 0;
 	}
